# 48-game-playing-bot

./: constants.py  pyproject.toml  readMe.md
.github/workflows/: branch.yaml
docs/source/: conf.py  index.rst
test/web_driver/: conftest.py  test_amazon.py  test_cookie.py  test_wikipedia.py
web_driver/: amazon.py  cookie.py  utils.py  web_driver.py  wikipedia.py
