[tool.poetry]
name = "cookie-picker"
version = "0.1.0"
description = "An automated cookie picker."
authors = ["RoastedCookie"]
readme = "README.md"
packages = [{include = "cookie_picker"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
