[tool.poetry]
name = "cookie-picker"
version = "0.1.0"
description = "An automated cookie picker."
authors = ["RoastedCookie"]
readme = "README.md"
packages = [{include = "web_driver"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.12.0"
isort = "^5.11.3"
flake8 = "^6.0.0"
bandit = "^1.7.4"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
